# ocaml-message-templates

./: .envrc  .gitignore  .ocamlformat  AGENTS.md  CONFIGURATION.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  README.md  TODO.md  after.txt  before.txt  dune  dune-project  message-templates-eio.opam  message-templates-lwt.opam  message-templates-ppx.opam  message-templates.opam  timestamp-cache.txt
.github/workflows/: docs.yml
.opencode/: opencode.jsonc
.opencode/agent/: developer.md  docs-explain.md
.opencode/commands/: learn.md  rmslop.md  update-agents.md  update-docs.md
.opencode/instructions/: ocaml.md
.opencode/plans/: 01-fix-architecture-bypass.md  02-remove-obj-usage.md  03-fix-log-context-thread-safety.md  04-extract-logger-core.md  05-fix-async-queue-busy-waiting.md  06-add-comprehensive-tests.md  07-add-sink-pipeline.md  08-add-configuration-validation.md  09-remove-async-sink-queue.md  09-type-annotation-deriving.md  10-remove-ppx-dead-code.md  11-remove-safe-conversions-dead-code.md  12-remove-core-library-dead-code.md  AMP_IMPROVEMENTS.md  ASYNC_LOGGING_PLAN.md  BUILD_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  INFORMATION_PACKAGE_COMPLETE.md  LOG_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE3_SUMMARY.md  PHASE5_IMPLEMENTATION.md  PHASE5_SUMMARY.md  PHASE6_ANALYSIS.md  PHASE6_COLLECTION_SUMMARY.md  PHASE6_CURRENT_LIMITATIONS.md  PHASE6_IMPLEMENTATION_GUIDE.md  PHASE6_IMPLEMENTATION_STATUS.md  PHASE6_INDEX.md  PHASE6_QUICKSTART.md  PHASE6_SPRINT1_STATUS.md  PHASE6_STATUS_COMPLETE.md  PHASE6_WORK_SUMMARY.md  PHASE_1_2_3_SUMMARY.md  README.md  README_PHASE6.md  millisecond-timestamp-caching.md
benchmarks/: benchmark.ml  benchmark_eio.ml  benchmark_lwt.ml  dune
doc/: dune  index.mld
examples/: basic.ml  dune  logging_advanced.ml  logging_basic.ml  logging_clef_json.ml  logging_clef_ppx.ml  logging_deriving.ml  logging_ppx.ml
examples/comprehensive_dir/: dune  main.ml
lib/: AGENTS.md  async_abstractions.ml  async_abstractions.mli  async_sink_queue.ml  async_sink_queue.mli  circuit_breaker.ml  circuit_breaker.mli  composite_sink.ml  composite_sink.mli  configuration.ml  configuration.mli  console_sink.ml  console_sink.mli  dune  file_sink.ml  file_sink.mli  filter.ml  filter.mli  json_sink.ml  json_sink.mli  level.ml  level.mli  log.ml  log.mli  log_context.ml  log_context.mli  log_event.ml  log_event.mli  logger.ml  logger.mli  logger_core.ml  logger_core.mli  memory_tracking.ml  memory_tracking.mli  messageTemplates.ml  messageTemplates.mli  metrics.ml  metrics.mli  null_sink.ml  null_sink.mli  (+11 more)
message-templates-eio/: AGENTS.md
message-templates-eio/lib/: dune  eio_configuration.ml  eio_console_sink.ml  eio_file_sink.ml  eio_logger.ml  eio_sink.ml  message_templates_eio.ml
message-templates-eio/test/: dune  test_eio_sinks.ml
message-templates-lwt/: AGENTS.md
message-templates-lwt/lib/: dune  lwt_configuration.ml  lwt_console_sink.ml  lwt_file_sink.ml  lwt_logger.ml  lwt_sink.ml  message_templates_lwt.ml
message-templates-lwt/test/: dune  test_lwt_sinks.ml
ppx/: AGENTS.md  code_generator.ml  code_generator.mli  dune  ppx_log_levels.ml  ppx_message_templates.ml  scope_analyzer.ml  scope_analyzer.mli
test/: AGENTS.md  debug_queue_test.ml  dune  test_circuit_breaker.ml  test_configuration.ml  test_escape.ml  test_global_log.ml  test_json_sink.ml  test_level.ml  test_logger.ml  test_memory_tracking.ml  test_metrics.ml  test_parser.ml  test_phase6_async_queue.ml  test_ppx_comprehensive.ml  test_qcheck_filters.ml  test_qcheck_properties.ml  test_qcheck_templates.ml  test_shutdown.ml  test_sinks.ml  test_timestamp_cache.ml  test_type_coverage.ml
test/ppx/: dune  test_ppx_levels.ml
