(test
 (name test_parser)
 (libraries
  message-templates
  alcotest))

(test
 (name test_ppx_comprehensive)
 (libraries
  message-templates
  message-templates-ppx
  yojson
  unix
  alcotest)
 (preprocess (pps message-templates-ppx)))

(test
 (name test_escape)
 (libraries
  message-templates
  alcotest))

(test
 (name test_level)
 (libraries
  message-templates
  alcotest))

(test
 (name test_sinks)
 (libraries
  message-templates
  alcotest))

(test
 (name test_logger)
 (libraries
  message-templates
  alcotest))

(test
 (name test_configuration)
 (libraries
  message-templates
  alcotest))

(test
 (name test_global_log)
 (libraries
  message-templates
  alcotest))

(test
 (name test_json_sink)
 (libraries
  message-templates
  yojson
  alcotest))


