(tests
 (names
  test_circuit_breaker
  test_configuration
  test_escape
  test_global_log
  test_json_sink
  test_level
  test_logger
  test_metrics
  test_parser
  test_phase6_async_queue
  test_ppx_comprehensive
  test_qcheck_filters
  test_qcheck_properties
  test_qcheck_templates
  test_shutdown
  test_sinks)
 (libraries
  alcotest
  message-templates
  message-templates-ppx
  qcheck
  qcheck-core
  threads
  unix
  yojson)
 (preprocess
  (pps message-templates-ppx)))
